--- a/umi/css/style.css
+++ b/umi/css/style.css
@@ -239,6 +239,11 @@ h1, h2, h3, h4, h5,
 	
 }
 
+.menu-header-text {
+	font-size: 18px;
+	color: gray;
+}
+
 @media screen and (max-width: 768px) {
   .display-4 {
     font-size: 37px; } }
